// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardFooter applies a style object via props 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  width: 100%;
  padding: calc(4px);
  border-top: solid 1px #e8e5e2;
  background-color: transparent;
  overflow: hidden;
}

<footer__CardFooterWrap
  border={true}
  style={
    Object {
      "color": "#0680cd",
    }
  }
>
  <footer
    className="c0"
    style={
      Object {
        "color": "#0680cd",
      }
    }
  />
</footer__CardFooterWrap>
`;

exports[`CardFooter matches snapshot 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  width: 100%;
  padding: calc(4px);
  border-top: solid 1px #e8e5e2;
  background-color: transparent;
  overflow: hidden;
}

<footer__CardFooterWrap
  border={true}
>
  <footer
    className="c0"
  />
</footer__CardFooterWrap>
`;

exports[`CardFooter sets a border-top when border is set to true 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  width: 100%;
  padding: calc(4px);
  border-top: solid 1px #e8e5e2;
  background-color: transparent;
  overflow: hidden;
}

<footer__CardFooterWrap
  border={true}
>
  <footer
    className="c0"
  />
</footer__CardFooterWrap>
`;

exports[`CardFooter sets bgColor via props 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  width: 100%;
  padding: calc(4px);
  border-top: solid 1px #e8e5e2;
  background-color: #696969;
  overflow: hidden;
}

<footer__CardFooterWrap
  bgColor="#696969"
  border={true}
>
  <footer
    className="c0"
  />
</footer__CardFooterWrap>
`;

exports[`CardFooter sets proper styles when \`multipleActions\` set to true 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  width: 100%;
  padding: calc(4px);
  border-top: solid 1px #e8e5e2;
  background-color: transparent;
  overflow: hidden;
}

<footer__CardFooterWrap
  border={true}
  multipleActions={true}
>
  <footer
    className="c0"
  />
</footer__CardFooterWrap>
`;
